@@ -25,7 +25,8 @@
 	  was added in maverick
 	* Fixed immediate umount in uck-remaster-unpack-{iso,rootfs} by trap
 	  EXIT handling when using -m.
-	* after chroot also /root/.gvfs is unmounted.
+	* unmount strategy (after chroot) was rewritten to unmount every mountpoint
+	  found inside remaster-root.
 * Package:
 	* gfxboot-dev dep added for maverick
 * Internal:
